<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Activity.UpdateNotes">

    <EditText
        android:id="@+id/updateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/background_look"
        android:hint="@string/note_title"
        android:padding="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_look"
        android:orientation="horizontal">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/priority"
            android:textColor="@color/black"
            android:layout_marginStart="10dp" />

        <ImageView
            android:id="@+id/redPriority"
            android:layout_gravity="center"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/red_shape"/>
        <ImageView
            android:id="@+id/yellowPriority"
            android:layout_gravity="center"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/yellow_shape"/>
        <ImageView
            android:id="@+id/greenPriority"
            android:layout_gravity="center"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/green_shape"/>

    </LinearLayout>

    <EditText
        android:id="@+id/updateNote"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/background_look"
        android:gravity="start"
        android:hint="@string/note_hint"
        android:padding="15dp" />

        <Button
            android:layout_gravity="center"
            android:layout_margin="35dp"
            android:id="@+id/saveBTN"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/save_btn" />

</LinearLayout>
</ScrollView>