<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="wrap_content">

        <TextView
            android:elevation="12dp"
            android:gravity="center"
            android:id="@+id/noFilter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="7dp"
            android:layout_margin="6dp"
            android:background="@drawable/unpressed_background"
            android:text="@string/no_filter"/>
        <TextView
            android:elevation="12dp"
            android:id="@+id/h2lFilter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="7dp"
            android:layout_margin="6dp"
            android:background="@drawable/unpressed_background"
            android:text="@string/high_to_low"/>
        <TextView
            android:elevation="12dp"
            android:id="@+id/l2hFilter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="8dp"
            android:layout_margin="6dp"
            android:paddingBottom="7dp"
            android:background="@drawable/unpressed_background"
            android:text="@string/low_to_high"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/layout"
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingBTN1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="27dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/redy"
        android:tint="@color/white"/>

</RelativeLayout>